samples/_failures_safe/1761793353_239a24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9d40d19.c: In function ‘main’:
./samples/SAFE/__tmp_f9d40d19.c:172:18: error: ‘TOKEN_UN’ undeclared (first use in this function); did you mean ‘TOKEN_EOF’?
  172 |             case TOKEN_UN
      |                  ^~~~~~~~
      |                  TOKEN_EOF
./samples/SAFE/__tmp_f9d40d19.c:172:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f9d40d19.c:172:13: error: expected ‘:’ or ‘...’ at end of input
  172 |             case TOKEN_UN
      |             ^~~~
./samples/SAFE/__tmp_f9d40d19.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f9d40d19.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f9d40d19.c:172:13: error: expected declaration or statement at end of input
